# haskell-lua-minifier

./: CHANGELOG.md  README.md  lua-minifier.cabal  test.lua
app/: Keywords.hs  Main.hs  Maps.hs  Number.hs  Reconstruct.hs  Symbols.hs  Tokeniser.hs
dist-newstyle/cache/: config
test-cases/: numbers.lua  test.lua
