cabal-version:      2.4
name:               lua-minifier
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Lua minifier written in haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         mattiasmcvolt@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable lua-minifier
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Keywords

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
