cabal-version:      2.4
name:               lua-minifier
version:            0.1.0.0

synopsis: Lua minifier written in haskell
maintainer:         mattiasmcvolt@gmail.com

extra-source-files: CHANGELOG.md

executable lua-minifier
    main-is:          Main.hs
    other-modules:    Tokeniser, Symbols, Maps, Number, Reconstruct
    build-depends:
        base >=4.7.0.0,
        bimap ^>=0.5.0
    hs-source-dirs:   app
    default-language: Haskell2010
